--- a/package.json
+++ b/package.json
@@ -20,8 +20,6 @@
   },
   "homepage": "https://github.com/torchhound/arcping#readme",
   "dependencies": {
-    "@architect/workflows": "^3.1.15",
-    "nodemailer": "^4.6.7",
-    "ssl-checker": "^1.0.2"
+    "@architect/workflows": "^3.1.15"
   }
 }
